<resources>
    <string name="app_name">365 Learning -- Course Tracker</string>
    <string name="view_courses">View Courses</string>
    <string name="main_title">365 Learning -- Course Tracker</string>
    <string name="viewTerms">View</string>
    <string name="viewTermList">View Terms</string>
    <string name="titleTextView">Title</string>
    <string name="term_title">Term Title</string>
    <string name="startTextView">Start Date:</string>
    <string name="endTextView">End Date:</string>
    <string name="mm">mm</string>
    <string name="dd">dd</string>
    <string name="yyyy">yyyy</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="viewAllCourses">View All Courses</string>
    <string name="courseMentor">Course Mentor</string>
    <string name="mentorName">Mentor Name</string>
    <string name="status">Status</string>
    <string name="currentStatus">Current Status</string>
    <string name="typeTextView">Type</string>
    <string name="dueDateTextView">Due Date</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="notes">Notes</string>
    <string name="mentorEmail">Mentor Email</string>
    <string name="mentorPhone">Mentor Phone</string>
    <string name="courseTitle">Course Title</string>
    <string name="notifications">Notifications</string>
    <string name="channel_name">ABM1</string>
    <string name="channel_description">ABM1</string>
    <string name="id"><b>ID</b></string>
    <string name="title"><b>Title</b></string>
    <string name="start"><b>Start</b></string>
    <string name="end"><b>End</b></string>
    <string name="statusheader"><b>Status</b></string>
    <string name="mentor"><b>Mentor</b></string>
    <string name="due"><b>Due</b></string>
    <string name="type"><b>Type</b></string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="viewCourses">View Courses</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="addAssessment">Add Assessment</string>
    <string name="noTermEnd">No term end date exist</string>
    <string name="noTermStart">No term start date exist</string>
    <string name="noTermTitle">No term title is available</string>
    <string name="noCourseEnd">No course end date exist</string>
    <string name="noCourseStart">No course start date exist</string>
    <string name="noCourseMentor">No course mentor available</string>
    <string name="noCourseStatus">No course status available</string>
    <string name="noCourseTitle">No course title is available</string>
    <string name="goalDate">Goal Date:</string>
    <string name="projectDetails">Project Details</string>
    <string name="unavailable">Unavailable</string>
    <string name="goal">Goal</string>
    <string name="startDateHeader">Start Date</string>
    <string name="goalDateHeader">Goal Date</string>

</resources>